# controllers/users.js
@@ -3,7 +3,7 @@ const ObjectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res) => {
     //#swagger.tags=['Users']
-    const result = await mongodb.getDatabase().db().collection('users').find();
+    const result = await mongodb.getDatabase().db().collection('contacts').find();
     result.toArray().then((users) => {
         res.setHeader('Content-Type', 'application/json');
         res.status(200).json(users)
@@ -13,7 +13,7 @@ const getAll = async (req, res) => {
 const getSingle = async (req, res) => {
     //#swagger.tags=['Users']
     const userId = new ObjectId(req.params.id);
-    const result = await mongodb.getDatabase().db().collection('users').find({ _id: userId });
+    const result = await mongodb.getDatabase().db().collection('contacts').find({ _id: userId });
     result.toArray().then((users) => {
         res.setHeader('Content-Type', 'application/json');
         res.status(200).json(users[0])
@@ -22,13 +22,14 @@ const getSingle = async (req, res) => {
 
 const createUser = async (req, res) => {
     //#swagger.tags=['Users']
-    const user = {
+    const contact = {
+        firstName: req.body.firstName,
+        lastName: req.body.lastName,
         email: req.body.email,
-        username: req.body.username,
-        name: req.body.name,
-        ipaddress: req.body.ipaddress
+        favoriteColor: req.body.favoriteColor,
+        birthday: req.body.birthday
     };
-    const response = await mongodb.getDatabase().db().collection('users').insertOne(user);
+    const response = await mongodb.getDatabase().db().collection('contacts').insertOne(user);
     if (response.acknowledged) {
         res.status(204).send();
     } else {
@@ -40,14 +41,15 @@ const updateUser = async (req, res) => {
   //#swagger.tags=['Users']
   try {
     const userId = new ObjectId(req.params.id);
-    const user = {
-      email: req.body.email,
-      username: req.body.username,
-      name: req.body.name,
-      ipaddress: req.body.ipaddress
+    const contact = {
+        firstName: req.body.firstName,
+        lastName: req.body.lastName,
+        email: req.body.email,
+        favoriteColor: req.body.favoriteColor,
+        birthday: req.body.birthday
     };
 
-    const response = await mongodb.getDatabase().db().collection('users').replaceOne({ _id: userId }, user);
+    const response = await mongodb.getDatabase().db().collection('contacts').replaceOne({ _id: userId }, user);
 
     if (response.matchedCount === 0) {
       return res.status(404).json({ message: 'User not found' });
@@ -78,7 +80,7 @@ const updateUser = async (req, res) => {
 const deleteUser = async (req, res) => {
     //#swagger.tags=['Users']
     const userId = new ObjectId(req.params.id);
-    const response = await mongodb.getDatabase().db().collection('users').deleteOne({ _id: userId });
+    const response = await mongodb.getDatabase().db().collection('contacts').deleteOne({ _id: userId });
     if (response.deletedCount > 0) {
         res.status(204).send();
     } else {
